Fix: Adjust gap between folders, and increase distance between folder and title

--- a/css/style.css
+++ b/css/style.css
@@ -8,14 +8,15 @@ body{
     height: 100vh;
     margin: 0;
     overflow: hidden;
-    padding: 20px 0;
+    padding: 1vh 0;
 }
 
 .poster-container {
     width: 100%;
     max-width: 1200px;
+    height: 100%;
     margin: 0;
-    padding: 40px;
+    padding: 2vh 40px;
     box-sizing: border-box;
 }
 
@@ -23,14 +24,15 @@ body{
     font-size: 2.5rem;
     font-weight: normal;
     text-align: center;
-    margin-bottom: 60px;
+    margin-top: 2vh;
+    margin-bottom: 3vh;
 }
 
 .folder-column { /* Parent container for the folders */
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 1.5vh;
+    gap: 1vh;
     width: 100%;
     margin: 0 auto;
 }
